# successfactors-auth

./: .gitignore  README.md  pyproject.toml  sf_auth.py  sf_saml_template.xml
.github/workflows/: python-publish.yml
Lambda/: Dockerfile  lambda_function.py  requirements.txt
src/successfactors_auth/: __init__.py  auth.py
