[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "successfactors_auth"
version = "0.0.4"
authors = [
  { name="Ray Lyon", email="ray@raylyon.net" },
]
description = "Authenticate to the SuccessFactors API."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/skoobasteeve/successfactors-python"
"Bug Tracker" = "https://github.com/skoobasteeve/successfactors-python/issues"
