[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "successfactors-auth"
version = "0.0.9"
authors = [
  { name="Ray Lyon", email="ray@raylyon.net" },
]
description = "Authenticate to the SuccessFactors API."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
  "requests",
  "lxml",
  "xmlsec",
]

[project.urls]
"Homepage" = "https://github.com/skoobasteeve/successfactors_auth"
"Bug Tracker" = "https://github.com/skoobasteeve/successfactors_auth/issues"
